<resources>
    <string name="app_name">Life Today</string>
    <string name="intro_screen_image">Introduction screen image</string>
    <string name="appDescription">A journal application for your thoughts and feelings</string>
    <string name="continuation_symbol">...</string>
    <string name="entry_icon_description">Entry icon</string>
    <string name="created_on">Created on</string>
    <string name="last_update_on">Last updated on</string>
    <string name="settings">Settings</string>
    <string name="signout">Sign out</string>
    <string name="no_entries_description">No entries description</string>
    <string name="no_entries_message">No entries available\nAdd an entry</string>
    <string name="entryTitleHint">Title</string>
    <string name="entryContentHint">Content</string>
    <string name="titleTextView">Title</string>
    <string name="contentTextView">Details</string>
    <string name="menu_save">Save</string>
    <string name="menu_save_description">Save option</string>
    <string name="menu_share">Share</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_share_description">Share description</string>
    <string name="menu_delete_description">Delete description</string>
    <string name="entry_activity_label">Entry</string>
    <string name="title_empty">Enter title</string>
    <string name="content_empty">Enter thoughts</string>
</resources>
